Genetic printd cross and mutation data