@@ -1,44 +1,27 @@
+import java.io.FileWriter;
+import java.io.IOException;
+import java.io.PrintWriter;
 import java.util.*;
 
 public class GeneticSolver {
-    private final int n;
-    private final int populationSize;
-    private final int generations;
-    private final double mutationRate;
-    private final int elitismCount;
-    private final int crossoverType;
-    private final int mutationType;
+    private final GeneticsParams params;
+    private final Random rand = new Random();
+    private final Counters counters = new Counters();
 
-    public GeneticSolver(
-            int n,
-            int populationSize,
-            int generations,
-            double mutationRate,
-            int elitismCount,
-            int crossoverType,
-            int mutationType
-    ) {
-        this.n = n;
-        this.populationSize = populationSize;
-        this.generations = generations;
-        this.mutationRate = mutationRate;
-        this.elitismCount = elitismCount;
-        this.crossoverType = crossoverType;
-        this.mutationType = mutationType;
+    public GeneticSolver(GeneticsParams params) {
+        this.params = params;
     }
 
     public List<QueenChromosome> solve() {
         List<QueenChromosome> population = initializePopulation();
 
-        for (int gen = 0; gen < generations; gen++) {
+        for (int gen = 0; gen < params.generations(); gen++) {
             Collections.sort(population);
 
-            if (population.get(0).getFitness() == 0) {
+            if (population.getFirst().getFitness() == 0) {
                 System.out.println("Solución encontrada en la generación: " + gen);
-                // Devuelve los 3 mejores encontrados hasta ese momento
                 return new ArrayList<>(population.subList(0, Math.min(3, population.size())));
             }
-
             population = createNextGeneration(population);
         }
 
@@ -49,22 +32,31 @@ public class GeneticSolver {
     private List<QueenChromosome> createNextGeneration(List<QueenChromosome> currentPopulation) {
         List<QueenChromosome> newPopulation = new ArrayList<>();
 
-        // --- IMPLEMENTACIÓN DE ELITISMO ---
-        // Los 'elitismCount' mejores individuos pasan directamente a la siguiente generación.
-        for (int i = 0; i < this.elitismCount; i++) {
+        for (int i = 0; i < params.elitismCount(); i++) {
             newPopulation.add(currentPopulation.get(i));
         }
 
-        // Rellenar el resto de la población con nuevos hijos
-        while (newPopulation.size() < this.populationSize) {
-            QueenChromosome parent1 = selectParent(currentPopulation);
-            QueenChromosome parent2 = selectParent(currentPopulation);
+        while (newPopulation.size() < params.populationSize()) {
+            QueenChromosome[] parents = selectParents(currentPopulation);
+            QueenChromosome[] children = crossover(parents[0], parents[1]);
+            mutate(children[0]);
+            mutate(children[1]);
 
-            // Solo se genera un hijo por cruce para simplificar
-            QueenChromosome child = crossover(parent1, parent2);
-            mutate(child);
-            newPopulation.add(child);
+            String cruceInfo =
+                "Padre1 " + Arrays.toString(parents[0].getGenes()) + " puntuación " + parents[0].getFitness() + "\n" +
+                "Padre2 " + Arrays.toString(parents[1].getGenes()) + " puntuación " + parents[1].getFitness() + "\n" +
+                "Hijo1  " + Arrays.toString(children[0].getGenes()) + " puntuación " + children[0].getFitness() + "\n" +
+                "Hijo2  " + Arrays.toString(children[1].getGenes()) + " puntuación " + children[1].getFitness() + "\n";
+            System.out.println(cruceInfo);
+
+            newPopulation.add(children[0]);
+            newPopulation.add(children[1]);
         }
+        System.out.println("Población al final de la generación:");
+        for (QueenChromosome c : newPopulation) {
+            System.out.println(Arrays.toString(c.getGenes()) + " -> " + c.getFitness());
+        }
+        System.out.println("----");
         return newPopulation;
     }
 
@@ -75,70 +67,94 @@ public class GeneticSolver {
         List<QueenChromosome> population = new ArrayList<>();
         Set<String> seen = new HashSet<>();
         int attempts = 0;
-        while (population.size() < this.populationSize) {
-            QueenChromosome candidate = new QueenChromosome(n);
+        while (population.size() < params.populationSize()) {
+            QueenChromosome candidate = new QueenChromosome(params.n_size(),rand);
             String key = Arrays.toString(candidate.getGenes());
             if (!seen.contains(key)) {
                 population.add(candidate);
                 seen.add(key);
             }
-            // Evitar bucle infinito si la población es muy grande para N pequeño
             attempts++;
-            if (attempts > this.populationSize * 100) {
+            if (attempts > params.populationSize() * 100) {
                 System.out.println("Advertencia: No se pudo generar una población inicial completamente única.");
                 break;
             }
         }
+        System.out.println("Población inicial generada con " + population.size() + " cromosomas.");
+        for (QueenChromosome chromosome : population) {
+            System.out.println(Arrays.toString(chromosome.getGenes()) + " -> " + chromosome.getFitness());
+        }
+        System.out.println(String.valueOf('☰').repeat(50));
         return population;
     }
 
-    private QueenChromosome selectParent(List<QueenChromosome> population) {
-        // Selección por Torneo: más eficiente y efectiva
+    private QueenChromosome[] selectParents(List<QueenChromosome> population) {
         int tournamentSize = 5;
-        List<QueenChromosome> tournament = new ArrayList<>();
-        Random rand = new Random();
-        for (int i = 0; i < tournamentSize; i++) {
-            int randomIndex = rand.nextInt(population.size());
-            tournament.add(population.get(randomIndex));
+        QueenChromosome parent1 = null, parent2 = null;
+        List<QueenChromosome> tournament1 = new ArrayList<>();
+        while (tournament1.size() < tournamentSize) {
+            QueenChromosome candidate = population.get(rand.nextInt(population.size()));
+            tournament1.add(candidate);
         }
-        return Collections.max(tournament);
+        parent1 = Collections.min(tournament1);
+
+        List<QueenChromosome> tournament2 = new ArrayList<>();
+        while (tournament2.size() < tournamentSize) {
+            QueenChromosome candidate = population.get(rand.nextInt(population.size()));
+            if (!Arrays.equals(candidate.getGenes(), parent1.getGenes())) {
+                tournament2.add(candidate);
+            }
+        }
+        parent2 = Collections.min(tournament2);
+
+        return new QueenChromosome[]{parent1, parent2};
     }
 
-    private QueenChromosome crossoverOnePoint(QueenChromosome p1, QueenChromosome p2) {
+    private QueenChromosome[] crossoverOnePoint(QueenChromosome p1, QueenChromosome p2) {
         int[] parent1Genes = p1.getGenes();
         int[] parent2Genes = p2.getGenes();
-        int[] childGenes = new int[n];
-        Random rand = new Random();
-        int crossoverPoint = rand.nextInt(n);
+        int[] child1Genes = new int[params.n_size()];
+        int[] child2Genes = new int[params.n_size()];
+        int crossoverPoint = rand.nextInt(params.n_size());
 
-        for (int i = 0; i < n; i++) {
+        for (int i = 0; i < params.n_size(); i++) {
             if (i < crossoverPoint) {
-                childGenes[i] = parent1Genes[i];
+                child1Genes[i] = parent1Genes[i];
+                child2Genes[i] = parent2Genes[i];
             } else {
-                childGenes[i] = parent2Genes[i];
+                child1Genes[i] = parent2Genes[i];
+                child2Genes[i] = parent1Genes[i];
             }
         }
-        return new QueenChromosome(childGenes);
+        return new QueenChromosome[]{
+                new QueenChromosome(child1Genes),
+                new QueenChromosome(child2Genes)
+        };
     }
 
-    private QueenChromosome crossoverUniform(QueenChromosome p1, QueenChromosome p2) {
+    private QueenChromosome[] crossoverUniform(QueenChromosome p1, QueenChromosome p2) {
         int[] parent1Genes = p1.getGenes();
         int[] parent2Genes = p2.getGenes();
-        int[] childGenes = new int[n];
-        Random rand = new Random();
+        int[] child1Genes = new int[params.n_size()];
+        int[] child2Genes = new int[params.n_size()];
 
-        for (int i = 0; i < n; i++) {
+        for (int i = 0; i < params.n_size(); i++) {
             if (rand.nextBoolean()) {
-                childGenes[i] = parent1Genes[i];
+                child1Genes[i] = parent1Genes[i];
+                child2Genes[i] = parent2Genes[i];
             } else {
-                childGenes[i] = parent2Genes[i];
+                child1Genes[i] = parent2Genes[i];
+                child2Genes[i] = parent1Genes[i];
             }
         }
-        return new QueenChromosome(childGenes);
+        return new QueenChromosome[]{
+                new QueenChromosome(child1Genes),
+                new QueenChromosome(child2Genes)
+        };
     }
 
-    private QueenChromosome crossover(QueenChromosome p1, QueenChromosome p2) {
-        if (crossoverType == 1) {
+    private QueenChromosome[] crossover(QueenChromosome p1, QueenChromosome p2) {
+        if (params.crossoverType() == 1) {
             return crossoverOnePoint(p1, p2);
         } else {
             return crossoverUniform(p1, p2);
@@ -146,9 +162,8 @@ public class GeneticSolver {
     }
 
     private void mutate(QueenChromosome chromosome) {
-        Random rand = new Random();
-        if (rand.nextDouble() < this.mutationRate) {
-            if (mutationType == 1) {
+        if (rand.nextDouble() < params.mutationRate()) {
+            if (params.mutationType() == 1) {
                 mutateRandom(chromosome);
             } else {
                 mutateSwapIfBetter(chromosome);
@@ -157,9 +172,8 @@ public class GeneticSolver {
     }
 
     private void mutateRandom(QueenChromosome chromosome) {
-        Random rand = new Random();
-        int row = rand.nextInt(n);
-        int col = rand.nextInt(n);
+        int row = rand.nextInt(params.n_size());
+        int col = rand.nextInt(params.n_size());
         int[] genes = chromosome.getGenes();
         int oldValue = genes[row];
         genes[row] = col;
@@ -172,11 +186,10 @@ public class GeneticSolver {
     }
 
     private void mutateSwapIfBetter(QueenChromosome chromosome) {
-        Random rand = new Random();
         int[] genes = chromosome.getGenes();
-        int i = rand.nextInt(n);
-        int j = rand.nextInt(n);
-        while (j == i) j = rand.nextInt(n);
+        int i = rand.nextInt(params.n_size());
+        int j = rand.nextInt(params.n_size());
+        while (j == i) j = rand.nextInt(params.n_size());
 
         int oldFitness = chromosome.getFitness();
         // Intercambia dos posiciones
@@ -196,20 +209,21 @@ public class GeneticSolver {
     }
 
     public String getMetrics() {
-        int totalInstructions = counters.assignments + counters.comparisons;
-        return String.format(
-                "Instrucciones ejecutadas: %d%n" +
-                        "Asignaciones: %d%n" +
-                        "Comparaciones: %d%n" +
-                        "Podas: %d%n"+
-                        "Memoria de variables: %d bits (%d bytes)",
-                totalInstructions,
-                counters.assignments,
-                counters.comparisons,
-                counters.prunningCounter,
-                counters.manualBits,
-                counters.manualBits/8
-        );
+//        int totalInstructions = counters.assignments + counters.comparisons;
+//        return String.format(
+//                "Instrucciones ejecutadas: %d%n" +
+//                        "Asignaciones: %d%n" +
+//                        "Comparaciones: %d%n" +
+//                        "Podas: %d%n"+
+//                        "Memoria de variables: %d bits (%d bytes)",
+//                totalInstructions,
+//                counters.assignments,
+//                counters.comparisons,
+//                counters.prunningCounter,
+//                counters.manualBits,
+//                counters.manualBits/8
+//        );
+        return "";
     }
 
 }
